[package]
name = "multipart-async"

version = "0.0.2"

authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A backend-agnostic extension for asynchronous HTTP libraries that provides support for POST multipart/form-data requests on for both client and server."

keywords = ["form-data", "hyper", "async", "http", "upload"]

repository = "http://github.com/abonander/multipart-async"

license = "MIT OR Apache-2.0"

edition = "2018"

[dependencies]
bytes = "0.4.4"
display_bytes = "0.1"
env_logger = "0.6.2"
futures-preview = "0.3.0-alpha.18"
http = "0.1.0"
log = "0.4"
mime = "0.3"
mime_guess = "2.0"
rand = "0.3"
tempdir = "0.3"
pin-utils = "0.1.0-alpha.4"

hyper = { version = "0.12", optional = true }
httparse = { version = "1.0", optional = true }
twoway = { version = "0.2", optional = true }

[features]
client = []
default = ["server"]
server = ["twoway", "httparse"]
# Use `Arc` instead of `Rc` where needed
use_arc = []

[dev-dependencies]
lazy_static = "1.3.0"

[[bin]]
name = "form_test"
path = "bin/form_test.rs"
required-features = ["hyper", "server"]
