[package]
name = "multipart-async"

version = "0.0.2"

authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A backend-agnostic extension for asynchronous HTTP libraries that provides support for POST multipart/form-data requests on for both client and server."

keywords = ["form-data", "hyper", "async", "http", "upload"]

repository = "http://github.com/abonander/multipart-async"

license = "MIT OR Apache-2.0"

edition = "2018"

categories = ["web-programming::http-client", "web-programming::http-server", "asynchronous"]

[dependencies]
bytes = "0.4.4"
display_bytes = "0.2.1"
http = "0.1.0"
log = "0.4"
mime = "0.3"
mime_guess = { version = "2.0", optional = true }
rand = { versoin = "0.7", optional = true }
pin-utils = "0.1.0-alpha.4"

httparse = { version = "1.0", optional = true }
twoway = { version = "0.2", optional = true }

futures-core-preview = "0.3.0-alpha.19"
futures-util-preview = { version = "0.3.0-alpha.19", default-features = false, optional = true }
futures-test-preview = { version = "0.3.0-alpha.19", optional = true }

hyper = { version = "0.13.0-alpha.4", optional = true, features = ["unstable-stream"] }

tokio-io = { version = "0.2.0-alpha.5", optional = true }
tokio-fs = { version = "0.2.0-alpha.5", optional = true }

# only used in integration testing; optional instead of dev dep so it doesn't require cURL
# to be installed for all contributors
curl = { version = "0.4", optional = true }

[features]
client = ["rand", "tokio-io", "mime_guess", "futures-util-preview"]
default = ["client", "server"]
server = ["twoway", "httparse"]
# Expose APIs used for fuzzing
# Note: these APIs are not considered part of the public API and may break
fuzzing = ["futures-util-preview", "futures-test-preview"]

[dev-dependencies]
hyper = "0.13.0-alpha.1"
tokio = "0.2.0-alpha.4"
lazy_static = "1.3.0"
futures-preview = "0.3.0-alpha.18"
futures-test-preview = "0.3.0-alpha.18"
futures-util-preview = { version = "0.3.0-alpha.18", default-features = false }
env_logger = "0.6.2"

#[[bin]]
#name = "form_test"
#path = "bin/form_test.rs"
#required-features = ["hyper", "server"]

[[example]]
name = "hyper-server"
required-features = ["hyper", "server"]

[[test]]
name = "curl-hyper"
required-features = ["hyper", "server", "curl"]
