[package]
name = "multipart-async"
version = "0.0.3"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]
description = "A backend-agnostic extension for asynchronous HTTP libraries that provides support for POST multipart/form-data requests on for both client and server."
keywords = ["form-data", "hyper", "async", "http", "upload"]
repository = "http://github.com/abonander/multipart-async"
license = "MIT OR Apache-2.0"
edition = "2018"
categories = ["web-programming::http-client", "web-programming::http-server", "asynchronous"]

[dependencies]
bytes = "1.0.1"
display_bytes = "0.2.1"
futures-core = "0.3.14"
futures-test = { version = "0.3.14", optional = true }
futures-util = { version = "0.3.14", default-features = false, optional = true }
http = "0.2.4"
httparse = { version = "1.3.6", optional = true }
hyper = { version = "0.14.5", optional = true, default-features = false, features = ["stream", "server"] }
log = "0.4.14"
mime = "0.3.16"
mime_guess = { version = "2.0.3", optional = true }
pin-utils = "0.1.0"
rand = { version = "0.8.3", optional = true }
tokio = { version = "1.4.0", optional = true, default-features = false, features = ["rt-multi-thread", "io-util"] }
twoway = { version = "0.2.1", optional = true }
# only used in integration testing; optional instead of dev dep so it doesn't require cURL
# to be installed for all contributors
curl = { version = "0.4", optional = true }

[features]
client = ["rand", "tokio", "mime_guess", "futures-util"]
default = ["client", "server"]
server = ["twoway", "httparse"]
# Expose APIs used for fuzzing
# Note: these APIs are not considered part of the public API and may break
fuzzing = ["futures-util", "futures-test"]

[dev-dependencies]
hyper = { version = "0.14.5", features = ["server", "http1", "tcp"] }
lazy_static = "1.4.0"
futures = "0.3.14"
futures-test = "0.3.14"
env_logger = "0.8.3"
tokio = { version = "1.4.0", features = ["macros"] }

[[example]]
name = "hyper-server"
required-features = ["hyper", "server"]

[[test]]
name = "curl-hyper"
required-features = ["hyper", "server", "curl"]
