[package]
name = "multipart-async-fuzz"
version = "0.1.0"
authors = ["Austin Bonander <austin@launchbadge.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.4"
multipart-async = { path = "../", features = ["server", "fuzzing"] }

[workspace]
members = ["."]
